# path_generator_DeanAnderson

./: README.md  compare_objective_functions.py  compare_objective_functions_two.py  control_points_0.npy  control_points_1.npy  control_points_2.npy  control_points_3.npy  control_points_4.npy  control_points_5.npy  create_incline_path.py  obstacles.npy  test_2d_DeanAnderson.py  test_2d_DeanAnderson_wrapper.py  test_2d_obstacle_free_paths.py  test_2d_path.py  test_2d_sfc_and_obstacle_free_paths.py  test_2d_sfc_paths.py  test_2d_sfc_uniform.py  test_3d_SFC_paths_building_incline_.py  test_3d_SFC_paths_buildings_no_incline copy.py  test_3d_SFC_paths_buildings_no_incline.py  test_3d_obstacle_free_paths.py  test_3d_obstacle_free_paths_cylinder.py  test_3d_path_obstacle_free_incline_constraint.py  test_3d_path_obstacle_free_incline_constraint_aggressive.py  test_3d_path_obstacle_free_no_incline_constraint.py  test_3d_path_obstacle_no_incline.py  test_3d_paths_cylinder.py  test_3d_paths_cylinder_no_incline.py  test_3d_paths_fwing.py  test_3d_sfc_and_obstacle_free_paths.py  test_3d_sfc_paths.py  test_creating_sequence_paths_2D.py  test_creating_sequence_paths_3D.py  test_creating_sequence_paths_3D_fixed_wing.py  test_creating_sequence_paths_3D_fixed_wing_random.py  test_creating_sequence_paths_for_fixed_wing_.py  test_direction_const_paths_1.py  test_direction_const_paths_2.py  test_incline_constrained_path.py  (+10 more)
PathObjectivesAndConstraints/src/: CBindHelperFunctions.cpp  CBindHelperFunctions.hpp  CBindingHelper.cpp  CMakeLists.txt  CrossTermBounds.cpp  CrossTermBounds.hpp  CrossTermEvaluator.cpp  CrossTermEvaluator.hpp  CrossTermProperties.cpp  CrossTermProperties.hpp  CurvatureConstraints.cpp  CurvatureConstraints.hpp  DerivativeBounds.cpp  DerivativeBounds.hpp  DerivativeEvaluator.cpp  DerivativeEvaluator.hpp  InclinationConstraint.cpp  InclinationConstraint.hpp  ObjectiveFunctions.cpp  ObjectiveFunctions.hpp  ObstacleConstraints.cpp  ObstacleConstraints.hpp  RotationHelperFunctions.cpp  RotationHelperFunctions.hpp  (+10 more)
(+27 files in other folders)
